<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\SoftDeletes;

class AcademicYear extends Model
{
    use SoftDeletes;

    protected $guarded = [];

    public function semesters()
    {
        return $this->hasMany(Semester::class);
    }
}
