<?php

namespace App\Models;

// use Illuminate\Contracts\Auth\MustVerifyEmail;
use Database\Factories\UserFactory;
use Illuminate\Database\Eloquent\Attributes\Fillable;
use Illuminate\Database\Eloquent\Attributes\Hidden;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Foundation\Auth\User as Authenticatable;
use Illuminate\Notifications\Notifiable;

class User extends Authenticatable
{
    use HasFactory, Notifiable;

    protected $fillable = ['name', 'email', 'password', 'role_id', 'avatar', 'bio', 'nis', 'nip', 'phone', 'is_active', 'last_login_at'];
    protected $hidden = ['password', 'remember_token'];

    /**
     * Get the attributes that should be cast.
     *
     * @return array<string, string>
     */
    protected function casts(): array
    {
        return [
            'email_verified_at' => 'datetime',
            'password' => 'hashed',
            'last_login_at' => 'datetime',
            'is_active' => 'boolean',
        ];
    }

    public function role()
    {
        return $this->belongsTo(Role::class);
    }

    /**
     * Role helper methods — menghindari hardcoded role_id di seluruh codebase.
     */
    public function isAdmin(): bool
    {
        return $this->role->name === 'super_admin';
    }

    public function isTeacher(): bool
    {
        return $this->role->name === 'teacher';
    }

    public function isStudent(): bool
    {
        return $this->role->name === 'student';
    }

    /**
     * Get the user's bookmarked materials.
     */
    public function bookmarks()
    {
        return $this->belongsToMany(Material::class, 'bookmarks', 'user_id', 'material_id')
                    ->withTimestamps();
    }

    /**
     * Get the user's certificates.
     */
    public function certificates()
    {
        return $this->hasMany(Certificate::class, 'student_id');
    }
}
